[package]
name = "tok"
version = "0.1.0"
authors = ["vgandari <victor.gandarillas@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.9"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "2.33", features = ["yaml"]}
time = "0.1"
titlecase = "1.0"
